RESOLVED FIXED172179
Unused lambdas in UserMediaPermissionRequestManagerProxy.cpp
https://bugs.webkit.org/show_bug.cgi?id=172179
Summary Unused lambdas in UserMediaPermissionRequestManagerProxy.cpp
David Kilzer (:ddkilzer)
Reported 2017-05-16 11:32:24 PDT
Need the bug URL (OOPS!). Reviewed by NOBODY (OOPS!). Fixes unused lambda warnings found with newer clang: Source/WebKit2/UIProcess/UserMediaPermissionRequestManagerProxy.cpp:309:46: error: lambda capture 'userMediaID' is not used [-Werror,-Wunused-lambda-capture] auto validateConstraintsHandler = [this, userMediaID, validHandler = WTFMove(validHandler), invalidHandler = WTFMove(invalidHandler), audioConstraints = WebCore::MediaConstraints(audioConstraints), videoConstraints = WebCore::MediaConstraints(videoConstraints)](String&& deviceIdentifierHashSalt) mutable { ^ Source/WebKit2/UIProcess/UserMediaPermissionRequestManagerProxy.cpp:318:41: error: lambda capture 'userMediaID' is not used [-Werror,-Wunused-lambda-capture] auto haveDeviceSaltHandler = [this, userMediaID, frameID, validateConstraintsHandler = WTFMove(validateConstraintsHandler)](uint64_t userMediaID, String&& deviceIdentifierHashSalt, bool originHasPersistentAccess) mutable { ^ Source/WebKit2/UIProcess/UserMediaPermissionRequestManagerProxy.cpp:318:54: error: lambda capture 'frameID' is not used [-Werror,-Wunused-lambda-capture] auto haveDeviceSaltHandler = [this, userMediaID, frameID, validateConstraintsHandler = WTFMove(validateConstraintsHandler)](uint64_t userMediaID, String&& deviceIdentifierHashSalt, bool originHasPersistentAccess) mutable { ^ Source/WebKit2/UIProcess/UserMediaPermissionRequestManagerProxy.cpp:362:37: error: lambda capture 'userMediaID' is not used [-Werror,-Wunused-lambda-capture] auto completionHandler = [this, userMediaID](uint64_t userMediaID, String&& deviceIdentifierHashSalt, bool originHasPersistentAccess) { ^ * UIProcess/UserMediaPermissionRequestManagerProxy.cpp: (WebKit::UserMediaPermissionRequestManagerProxy::requestUserMediaPermissionForFrame): (WebKit::UserMediaPermissionRequestManagerProxy::enumerateMediaDevicesForFrame): - Remove unused lambdas. --- 2 files changed, 30 insertions(+), 3 deletions(-)
Attachments
Patch (5.46 KB, patch)
2017-05-16 11:32 PDT, David Kilzer (:ddkilzer)
no flags
David Kilzer (:ddkilzer)
Comment 1 2017-05-16 11:32:25 PDT
WebKit Commit Bot
Comment 2 2017-05-16 14:02:59 PDT
Comment on attachment 310284 [details] Patch Clearing flags on attachment: 310284 Committed r216945: <http://trac.webkit.org/changeset/216945>
WebKit Commit Bot
Comment 3 2017-05-16 14:03:01 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.